--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rollup": "^2.47.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-watch-external": "^1.0.0"
   }
 }
