--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "license": "MIT",
   "private": true,
   "watch": {
-    "make": "core/voxels.c"
+    "make": {
+      "extensions": "c",
+      "patterns": ["core"],
+      "runOnChangeOnly": false
+    }
   },
   "scripts": {
     "build": "rollup -c rollup.config.js",
-    "make": "sh core/make.sh",
+    "make": "sh core/voxels/make.sh",
+    "make:watch": "npm-watch make",
     "serve": "npm run build -- -w",
-    "watch": "npm-watch",
-    "start": "run-p serve watch"
+    "start": "run-p serve make:watch"
   },
   "dependencies": {
     "three": "^0.128.0"
