--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "watch": {
     "compile": {
       "extensions": "c",
-      "patterns": ["core"],
+      "patterns": [
+        "core/voxels"
+      ],
       "runOnChangeOnly": false
     }
   },
@@ -26,6 +28,7 @@
     "npm-watch": "^0.9.0",
     "rollup": "^2.47.0",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-watch-external": "^1.0.0"
