--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "run-p serve compile:watch"
   },
   "dependencies": {
+    "fflate": "^0.6.10",
     "three": "^0.128.0"
   },
   "devDependencies": {
