--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "dependencies": {
     "fflate": "^0.6.10",
+    "protobufjs": "^6.11.2",
+    "simple-peer": "^9.11.0",
     "three": "^0.128.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "npm-run-all": "^4.1.5",
     "npm-watch": "^0.9.0",
