--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "dudes",
   "author": "Daniel Esteban Nombela",
   "license": "MIT",
-  "private": true,
+  "module": "index.js",
+  "version": "0.1.8",
   "watch": {
     "compile": {
       "extensions": "c",
@@ -12,6 +13,16 @@
       "runOnChangeOnly": false
     }
   },
+  "files": [
+    "core/*.js",
+    "core/*.wasm",
+    "renderables/*.js",
+    "vendor/*.js",
+    "index.js",
+    "LICENSE",
+    "package.json",
+    "README.md"
+  ],
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "compile": "sh core/voxels/compile.sh",
@@ -20,17 +31,18 @@
     "start": "run-p serve compile:watch"
   },
   "dependencies": {
-    "fflate": "^0.6.10",
+    "fflate": "^0.7.0",
     "protobufjs": "^6.11.2",
     "simple-peer": "^9.11.0",
     "three": "^0.128.0"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "npm-run-all": "^4.1.5",
     "npm-watch": "^0.9.0",
-    "rollup": "^2.47.0",
+    "rollup": "^2.50.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
