--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Daniel Esteban Nombela",
   "license": "MIT",
   "module": "index.js",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "watch": {
     "compile": {
       "extensions": "c",
@@ -23,6 +23,7 @@
     "package.json",
     "README.md"
   ],
+  "homepage": "https://dudes.gatunes.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/danielesteban/dudes"
@@ -38,7 +39,7 @@
     "fflate": "^0.7.0",
     "protobufjs": "^6.11.2",
     "simple-peer": "^9.11.0",
-    "three": "^0.128.0"
+    "three": "^0.129.0"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
