--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,25 @@
   "name": "dudes-server",
   "author": "Daniel Esteban Nombela",
   "license": "MIT",
-  "private": true,
+  "bin": "./main.js",
+  "version": "0.1.15",
+  "files": [
+    "*.js",
+    "*.proto",
+    "package.json"
+  ],
+  "homepage": "https://dudes.gatunes.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danielesteban/dudes"
+  },
   "scripts": {
     "protocol": "pbjs -t static-module -w es6 -o ../vendor/protocol.js --no-comments messages.proto",
     "start": "node main.js"
   },
   "dependencies": {
     "colorsys": "^1.0.22",
+    "dudes": "^0.1.15",
     "esm": "^3.2.25",
     "protobufjs": "^6.11.2",
     "uuid": "^8.3.2",
